# simple_notepad_project

./: CMakeLists.txt  find_replace_dialog.ui  main.cpp  main_window.cpp  main_window.h  notepad_exception.h  sort.h  spell_checker.h  spell_checker_highlighter.h  test_sort.cpp  text_transform.h  word_frequency_dialog.ui
